@@ -20,6 +20,13 @@
 
       \item \code{factor(x, exclude = L)} behaves more rationally when
       \code{x} or \code{L} are character vectors.
+
+      Arithmetic between length-1 arrays
+      and longer non-arrays had silently dropped the array attributes
+      and recycled.  This now gives a warning and will signal an error in
+      the future, as it has always for logic and comparison operations
+      in these cases (e.g., compare \code{matrix(1,1) + 2:3} and
+      \code{matrix(1,1) < 2:3}).
     }
   }
   \subsection{NEW FEATURES}{
@@ -263,7 +270,7 @@
       \env{_R_CHECK_CRAN_INCOMING_REMOTE_} false now skips tests that
       require remote access.  The remaining (local) tests typically
       run very quickly compared to the remote tests.
-      
+
       \item \command{R CMD build} will now give priority to vignettes
       produced from files in the \file{vignettes} directory over those
       in the \file{inst/doc} directory, with a warning that the latter
